# ChatBotApp

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: constants.py  firebase_config.py
services/authentication/: auth_service.py  auth_ui.py
services/chat/: conversation_service.py  memory_service.py  model_service.py  retrieval_service.py
ui/: chat_ui.py
