[project]
name = "chat-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Andriy852",email = "andrijzurba79@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "firebase-admin (==6.7.0)",
    "langchain (==0.3.21)",
    "langchain-chroma (==0.2.2)",
    "langchain-core (==0.3.49)",
    "langchain-openai (==0.3.11)",
    "langgraph (==0.3.21)",
    "requests (==2.32.3)",
    "streamlit (==1.43.2)",
    "typing-extensions (==4.13.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
